# mcp-cpp

./: .gitignore  CMakeLists.txt  README.md
examples/mcp-agent/: CMakeLists.txt  main.cpp
examples/mcp-client/: CMakeLists.txt  main.cpp
examples/mcp-server/: CMakeLists.txt  main.cpp
examples/mcp_client/: CMakeLists.txt  main.cpp
examples/mcp_server/: CMakeLists.txt  main.cpp
include/mcp-cpp/: mcp_client.h  mcp_client_authorization.h  mcp_client_transport.h  mcp_http_client_transport.h  mcp_http_server_transport.h  mcp_server.h  mcp_server_transport.h  mcp_stdio_client_transport.h  mcp_stdio_server_transport.h  mcp_type.h
lib/mcp-cpp/: CMakeLists.txt  base64.c  base64.h  mcp_client.cpp  mcp_client_authorization.cpp  mcp_client_authorization_impl.cpp  mcp_client_authorization_impl.h  mcp_client_impl.cpp  mcp_client_impl.h  mcp_client_transport.cpp  mcp_common.h  mcp_http_client_transport_impl.cpp  mcp_http_client_transport_impl.h  mcp_http_server_transport.cpp  mcp_http_server_transport_impl.cpp  mcp_http_server_transport_impl.h  mcp_server.cpp  mcp_server_impl.cpp  mcp_server_impl.h  mcp_server_transport.cpp  mcp_stdio_client_transport_impl.cpp  mcp_stdio_client_transport_impl.h  mcp_stdio_server_transport.cpp  mcp_stdio_server_transport_impl.cpp  mcp_stdio_server_transport_impl.h  mcp_type.cpp
lib/mcp-cpp/platform/: mcp_stdio_client_transport_impl_posix.cpp  mcp_stdio_client_transport_impl_posix.h  mcp_stdio_client_transport_impl_win32.cpp  mcp_stdio_client_transport_impl_win32.h  platform.h  platform_posix.cpp
vc/: mcp-cpp.sln
vc/mcp-agent/: mcp-agent.vcxproj  mcp-agent.vcxproj.filters  packages.config
vc/mcp-client/: mcp-client.vcxproj  mcp-client.vcxproj.filters
vc/mcp-cpp/: mcp-cpp.vcxproj  mcp-cpp.vcxproj.filters
vc/mcp-server/: mcp-server.vcxproj  mcp-server.vcxproj.filters
